# embodied-intelligence-ai

./: LICENSE  README.md  pyproject.toml  run_demo.py  train.py
src/: __init__.py
src/agents/: __init__.py  base.py  embodied.py  policy.py
src/environments/: __init__.py  gridworld.py  substrate.py
src/evaluation/: __init__.py  metrics.py
src/memory/: __init__.py  external_memory.py
src/models/: __init__.py  transformer.py  world_model.py
src/training/: __init__.py  loop.py
tests/: test_environment.py  test_memory.py
